Add Login and logout

--- a/frontend/src/app/layout/app.topbar.component.html
+++ b/frontend/src/app/layout/app.topbar.component.html
@@ -16,55 +16,62 @@
                     <button pButton icon="pi pi-search" class="topbar-searchbutton p-button-text p-button-secondary text-color-secondary p-button-rounded flex-shrink-0" type="button" (click)="activateSearch()"></button>
                     <div class="search-input-wrapper">
                         <span class="p-input-icon-right">
-                            <input #searchinput type="text" pInputText placeholder="Search" (blur)="deactivateSearch()" (keydown.escape)="deactivateSearch()"/>
+                            <input #searchinput type="text" pInputText placeholder="Search" (blur)="deactivateSearch()" (keydown.escape)="deactivateSearch()" />
                             <i class="pi pi-search"></i>
                         </span>
                     </div>
                 </div>
             </li>
-           
-            <li  class="profile-item topbar-item " >
+
+            <li class="profile-item topbar-item ">
                 <button pButton type="button" icon="pi pi-bell" class="p-button-text p-button-secondary text-color-secondary p-button-rounded flex-shrink-0"></button>
             </li>
 
-            <li  class="profile-item topbar-item " >
-                <button pButton type="button" icon="pi pi-comment"  class="p-button-text p-button-secondary relative text-color-secondary p-button-rounded flex-shrink-0"></button>
+            <li class="profile-item topbar-item ">
+                <button pButton type="button" icon="pi pi-comment" class="p-button-text p-button-secondary relative text-color-secondary p-button-rounded flex-shrink-0"></button>
             </li>
 
             <li class="ml-3">
                 <button pButton type="button" icon="pi pi-cog" class="p-button-text p-button-secondary text-color-secondary p-button-rounded flex-shrink-0" (click)="onConfigButtonClick()"></button>
             </li>
 
-            <li #profile class="profile-item topbar-item " >
+            <li #profile class="profile-item topbar-item ">
                 <a pStyleClass="@next" enterFromClass="ng-hidden" enterActiveClass="px-scalein" leaveToClass="ng-hidden" leaveActiveClass="px-fadeout" [hideOnOutsideClick]="true" pRipple class="cursor-pointer">
-                    <img class="border-circle" src="assets/demo/images/avatar/square/avatar-m-1.jpg">
+                    <img *ngIf="validImage; else avatarPlaceholder" class="border-circle" [src]="user.image" (error)="imageFailed()" alt="User Avatar">
+
+                    <ng-template #avatarPlaceholder>
+                        <p-avatar [label]="initialsUser" styleClass="mr-2" size="large" shape="circle"></p-avatar>
+                    </ng-template>
                 </a>
 
                 <ul class="topbar-menu active-topbar-menu p-4 w-15rem z-5 ng-hidden border-round">
                     <li role="menuitem" class="m-0 mb-3">
-                        <a href="#" class="flex align-items-center hover:text-primary-500 transition-duration-200" pStyleClass="@grandparent" enterFromClass="ng-hidden" enterActiveClass="px-scalein" leaveToClass="ng-hidden" leaveActiveClass="px-fadeout">
+                        <a href="#" class="flex align-items-center hover:text-primary-500 transition-duration-200" pStyleClass="@grandparent" enterFromClass="ng-hidden" enterActiveClass="px-scalein"
+                           leaveToClass="ng-hidden" leaveActiveClass="px-fadeout">
                             <i class="pi pi-fw pi-lock mr-2"></i>
                             <span>Privacy</span>
                         </a>
                     </li>
                     <li role="menuitem" class="m-0 mb-3">
-                        <a href="#" class="flex align-items-center hover:text-primary-500 transition-duration-200" pStyleClass="@grandparent" enterFromClass="ng-hidden" enterActiveClass="px-scalein" leaveToClass="ng-hidden" leaveActiveClass="px-fadeout">
+                        <a href="#" class="flex align-items-center hover:text-primary-500 transition-duration-200" pStyleClass="@grandparent" enterFromClass="ng-hidden" enterActiveClass="px-scalein"
+                           leaveToClass="ng-hidden" leaveActiveClass="px-fadeout">
                             <i class="pi pi-fw pi-cog mr-2"></i>
                             <span>Settings</span>
                         </a>
                     </li>
                     <li role="menuitem" class="m-0">
-                        <a href="#" class="flex align-items-center hover:text-primary-500 transition-duration-200" pStyleClass="@grandparent" enterFromClass="ng-hidden" enterActiveClass="px-scalein" leaveToClass="ng-hidden" leaveActiveClass="px-fadeout">
+                        <a href="javascript:void(0)" (click)="logout()" class="flex align-items-center hover:text-primary-500 transition-duration-200" pStyleClass="@grandparent" enterFromClass="ng-hidden"
+                           enterActiveClass="px-scalein" leaveToClass="ng-hidden" leaveActiveClass="px-fadeout">
                             <i class="pi pi-fw pi-sign-out mr-2"></i>
                             <span>Logout</span>
                         </a>
                     </li>
                 </ul>
             </li>
-      
+
             <li class="right-panel-button relative hidden lg:block">
-                <button pButton  type="button" label="Today" style="width:5.7rem" icon="pi pi-bookmark" 
-                class="layout-rightmenu-button hidden md:block font-normal" styleClass="font-normal" (click)="onSidebarButtonClick()"></button>
+                <button pButton type="button" label="Today" style="width:5.7rem" icon="pi pi-bookmark" class="layout-rightmenu-button hidden md:block font-normal" styleClass="font-normal"
+                        (click)="onSidebarButtonClick()"></button>
                 <button pButton type="button" icon="pi pi-bookmark" styleClass="font-normal" class="layout-rightmenu-button block md:hidden" (click)="onSidebarButtonClick()"></button>
             </li>
         </ul>
