--- a/frontend/src/assets/layout/styles/layout/_layout_dark.scss
+++ b/frontend/src/assets/layout/styles/layout/_layout_dark.scss
@@ -6,7 +6,7 @@ $scale: 14px !default;
     --sidebar-border: 1px solid var(--surface-border);
     --card-shadow: none;
     --body-bg: linear-gradient(180deg, #2E323F 0%, #0A061A 100%);
-    --body-bg: linear-gradient(180deg, #2d2d30 0%, #29352c 100%);
+    // --body-bg: linear-gradient(180deg, #344336 0%, #344336 100%);
     --body-image: url("/assets/layout/images/effect-ondark.png");
     --root-menu-item-hover-bg: rgba(255, 255, 255, 0.05);
     --exception-pages-image: url('/assets/layout/images/pages/exception-ondark.png');
