Refactor login component

--- a/frontend/src/app/components/auth/login/login.component.html
+++ b/frontend/src/app/components/auth/login/login.component.html
@@ -27,7 +27,7 @@
                 <div class="button-container">
                     <button type="button" pButton label="Login" (click)="onLogin()" class="block" style="max-width: 320px;
                 margin-bottom: 32px;"></button>
-                    <span class="flex text-sm text-color-secondary">Don’t have an account?<a class="cursor-pointer ml-1">Sign-up here</a></span>
+                    <span class="flex text-sm text-color-secondary">Don’t have an account?<a href="/#/auth/register" class="cursor-pointer ml-1">Sign-up here</a></span>
                 </div>
             </div>
 
