--- a/frontend/src/assets/layout/styles/layout/_layout_light.scss
+++ b/frontend/src/assets/layout/styles/layout/_layout_light.scss
@@ -1,15 +1,12 @@
-$breakpoint:992px !default;
-$scale:14px !default;
+$breakpoint: 992px !default;
+$scale: 14px !default;
 
 .layout-light {
-    --sidebar-shadow: 0px 4px 50px #D9DDFC;
+    --sidebar-shadow: 0px 4px 50px #f7fcd9;
     --sidebar-border: 1px solid transparent;
-    --card-shadow: 0px 4px 30px rgba(221, 224, 255, 0.54);
-    --body-bg:linear-gradient(180deg, #F6F9FC 0%, #ECECF9 100%);
-    --body-image:  url("/assets/layout/images/effect-onlight.png");
-    --root-menu-item-hover-bg:rgba(68, 72, 109, 0.07);
+    --card-shadow: 0px 4px 30px rgba(255, 254, 221, 0.54);
+    --body-bg: linear-gradient(180deg, #f8f6f3 0%, #E6DAC4 100%);
+    --body-image: url("/assets/layout/images/effect-onlight.png");
+    --root-menu-item-hover-bg: rgba(68, 72, 109, 0.07);
     --exception-pages-image: url('/assets/layout/images/pages/exception-onlight.png');
 }
-
-
-
