Fix title on landing page

--- a/frontend/src/app/demo/components/landing/landing.component.html
+++ b/frontend/src/app/demo/components/landing/landing.component.html
@@ -70,10 +70,10 @@
         </div>
 
         <div class="header-text" style="padding: 100px 60px;">
-            <h1 class="mb-0 text-gray-800" style="font-size: 80px; line-height: 95px;">This is Atlantis</h1>
-            <h2 class="mt-0 font-medium text-4xl text-gray-700">Modern, fresh and groovy</h2>
-            <a href="/#/auth/login" class="p-button text-gray-700 bg-cyan-500 border-cyan-500 font-bold border-round" style="mix-blend-mode: multiply; padding: 0.858rem 1.142rem">
-                <span class="p-button-text">Live Demo</span>
+            <h1 class="mb-0 text-gray-800" style="font-size: 80px; line-height: 95px;">Esto es To Bless</h1>
+            <h2 class="mt-0 font-medium text-4xl text-gray-700">Donde tu trabajo encuentra propósit</h2>
+            <a href="/#/auth/booking" class="p-button text-gray-700 bg-cyan-500 border-cyan-500 font-bold border-round" style="mix-blend-mode: multiply; padding: 0.858rem 1.142rem">
+                <span class="p-button-text">Reserva tu tour gratuito →</span>
             </a>
         </div>
 
