Updates on landing page

--- a/frontend/src/app/demo/components/landing/landing.component.html
+++ b/frontend/src/app/demo/components/landing/landing.component.html
@@ -17,32 +17,31 @@
                     <li class="mt-5 lg:mt-0">
                         <a (click)="scrollToElement(home)" pRipple pStyleClass="@grandparent" enterFromClass="ng-hidden" enterActiveClass="px-fadein" leaveToClass="ng-hidden"
                            class="flex m-0 lg:ml-5 lg:px-0 px-3 py-3 text-gray-800 font-medium line-height-3 hover:text-gray-800 cursor-pointer">
-                            <span>Home</span>
+                            <span>Inicio</span>
                         </a>
                     </li>
                     <li>
                         <a (click)="scrollToElement(meet)" pRipple pStyleClass="@grandparent" enterFromClass="ng-hidden" enterActiveClass="px-fadein" leaveToClass="ng-hidden"
                            class="flex m-0 lg:ml-5 lg:px-0 px-3 py-3 text-gray-800 font-medium line-height-3 hover:text-gray-800 cursor-pointer">
-                            <span>Meet
-                                Atlantis</span>
+                            <span>Conocenos</span>
                         </a>
                     </li>
                     <li>
                         <a (click)="scrollToElement(features)" pRipple pStyleClass="@grandparent" enterFromClass="ng-hidden" enterActiveClass="px-fadein" leaveToClass="ng-hidden"
                            class="flex m-0 lg:ml-5 lg:px-0 px-3 py-3 text-gray-800 font-medium line-height-3 hover:text-gray-800 cursor-pointer">
-                            <span>Features</span>
+                            <span>Amenidades</span>
                         </a>
                     </li>
                     <li>
                         <a (click)="scrollToElement(pricing)" pRipple pStyleClass="@grandparent" enterFromClass="ng-hidden" enterActiveClass="px-fadein" leaveToClass="ng-hidden"
                            class="flex m-0 md:ml-5 md:px-0 px-3 py-3 text-gray-800 font-medium line-height-3 hover:text-gray-800 cursor-pointer">
-                            <span>Pricing</span>
+                            <span>Precios</span>
                         </a>
                     </li>
                     <li>
-                        <a pRipple pStyleClass="@grandparent" enterFromClass="ng-hidden" enterActiveClass="px-fadein" leaveToClass="ng-hidden"
+                        <a href="/#/auth/login" pRipple pStyleClass="@grandparent" enterFromClass="ng-hidden" enterActiveClass="px-fadein" leaveToClass="ng-hidden"
                            class="flex m-0 md:ml-5 md:px-0 px-3 py-3 text-gray-800 font-medium line-height-3 hover:text-gray-800 cursor-pointer">
-                            <span>Buy Now</span>
+                            <span>Reservar</span>
                         </a>
                     </li>
 
@@ -71,8 +70,8 @@
 
         <div class="header-text" style="padding: 100px 60px;">
             <h1 class="mb-0 text-gray-800" style="font-size: 80px; line-height: 95px;">Esto es To Bless</h1>
-            <h2 class="mt-0 font-medium text-4xl text-gray-700">Donde tu trabajo encuentra propósit</h2>
-            <a href="/#/auth/booking" class="p-button text-gray-700 bg-cyan-500 border-cyan-500 font-bold border-round" style="mix-blend-mode: multiply; padding: 0.858rem 1.142rem">
+            <h2 class="mt-0 font-medium text-4xl text-gray-700">Donde tu trabajo encuentra propósito</h2>
+            <a href="/#/auth/booking" class="p-button bg-green-800 border-green-800 font-bold border-round" style="mix-blend-mode: multiply; padding: 0.858rem 1.142rem">
                 <span class="p-button-text">Reserva tu tour gratuito →</span>
             </a>
         </div>
@@ -81,44 +80,38 @@
             <div class="grid flex">
                 <div class="col-12 md:col-6 lg:col-4 flex justify-content-center">
                     <div class=" header-feature-box mr-3 mb-4 border-round-3xl p-5 text-white">
-                        <span class="title mb-3 block text-2xl ">Responsive Layout</span>
-                        <span class="content">View it on the web and mobile device. Prime premium themes are aready for
-                            the all devices.</span>
+                        <span class="title mb-3 block text-2xl ">🌐 Internet de Fibra Óptica Ultra-rápida</span>
+                        <span class="content">Conectividad bendecida: navega sin límites a 1 Gbps</span>
                     </div>
                 </div>
                 <div class="col-12 md:col-6 lg:col-4 flex justify-content-center">
                     <div class="header-feature-box mr-3 mb-4 border-round-3xl p-5 text-white">
-                        <span class="title mb-3 block text-2xl">Fresh</span>
-                        <span class="content">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
-                            tempor.</span>
+                        <span class="title mb-3 block text-2xl">🧘‍♀️ Zonas de Descanso Consciente</span>
+                        <span class="content">Rincones zen con plantas naturales para recargar energía</span>
                     </div>
                 </div>
                 <div class="col-12 md:col-6 lg:col-4 flex justify-content-center">
                     <div class="header-feature-box mr-3 mb-4 border-round-3xl p-5 text-white">
-                        <span class="title mb-3  block text-2xl">Modern Design</span>
-                        <span class="content">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
-                            tempor.</span>
+                        <span class="title mb-3  block text-2xl">📶 Salas de Reuniones "Tech-Enabled"</span>
+                        <span class="content">Equipadas con pantallas 4K, sonido inmersivo y booking inteligente</span>
                     </div>
                 </div>
                 <div class="col-12 md:col-6 lg:col-4 flex justify-content-center">
                     <div class="header-feature-box mr-3 mb-4 border-round-3xl p-5 text-white">
-                        <span class="title mb-3 block text-2xl">Clean code</span>
-                        <span class="content">Our frontend is so easy to understand. If you want to modify the code it’s
-                            an easy job for you. Our code is clean and easy to read.</span>
+                        <span class="title mb-3 block text-2xl">☕ Café de Especialidad Ilimitado</span>
+                        <span class="content">Granos locales tostados en casa + barra de infusiones gourmet</span>
                     </div>
                 </div>
                 <div class="col-12 md:col-6 lg:col-4 flex justify-content-center">
                     <div class="header-feature-box mr-3 mb-4 border-round-3xl p-5 text-white">
-                        <span class="title mb-3 block text-2xl">Ready!</span>
-                        <span class="content">We work hard to write down all aspects of prime themes to make sure that
-                            there is no unanswered questions left.</span>
+                        <span class="title mb-3 block text-2xl">✨ Eventos de Networking con Propósito</span>
+                        <span class="content">Mentorías exclusivas, workshops de bienestar y domingos de brunch work</span>
                     </div>
                 </div>
                 <div class="col-12 md:col-6 lg:col-4 flex justify-content-center">
                     <div class="header-feature-box mr-3 mb-4 border-round-3xl p-5 text-white">
-                        <span class="title mb-3 block text-2xl">Well documented</span>
-                        <span class="content">We work hard to write down all aspects of prime themes to make sure that
-                            there is no unanswered questions left.</span>
+                        <span class="title mb-3 block text-2xl">🔒 Lockers Inteligentes con Carga USB</span>
+                        <span class="content">Guarda tu equipo seguro mientras exploras la ciudad</span>
                     </div>
                 </div>
             </div>
