Add amenities to memberships on frontend

--- a/frontend/src/app/components/memberships/components/admin-membership/admin-membership.component.html
+++ b/frontend/src/app/components/memberships/components/admin-membership/admin-membership.component.html
@@ -42,6 +42,11 @@
             <label for="description">Descripción</label>
             <textarea id="description" pInputTextarea [(ngModel)]="membership.description" rows="3" cols="20"></textarea>
         </div>
+        <div class="field">
+            <label for="amenities">Amenidades Incluidas</label>
+            <p-chips id="amenities" [(ngModel)]="membership.amenities" separator="," placeholder="Escribe una amenidad y presiona Enter"></p-chips>
+            <small>Escribe una amenidad y presiona Enter para añadirla a la lista.</small>
+        </div>
         <div class="formgrid grid">
             <div class="field col">
                 <label for="price">Precio</label>
