Add popup to show booking details

--- a/frontend/src/app/components/bookings/components/booking-calendar/booking-calendar.component.html
+++ b/frontend/src/app/components/bookings/components/booking-calendar/booking-calendar.component.html
@@ -1,4 +1,5 @@
 <p-toast></p-toast>
+<p-confirmDialog [style]="{width: '450px'}"></p-confirmDialog>
 <div class="card">
     <h3>Calendario de Reservas</h3>
     <full-calendar [options]="calendarOptions"></full-calendar>
@@ -30,5 +31,48 @@
     <ng-template pTemplate="footer">
         <button pButton pRipple label="Cancelar" icon="pi pi-times" class="p-button-text" (click)="hideDialog()"></button>
         <button pButton pRipple label="Confirmar Reserva" icon="pi pi-check" class="p-button-text" (click)="saveBooking()"></button>
+    </ng-template>
+</p-dialog>
+
+<p-dialog [(visible)]="viewBookingDialog" [style]="{width: '500px'}" header="Detalles de la Reserva" [modal]="true" (onHide)="selectedBooking = null">
+    <ng-template pTemplate="content" *ngIf="selectedBooking">
+        <div class="p-fluid">
+            <div class="field">
+                <label>Recurso</label>
+                <p><strong>{{ selectedBooking.resource.name }}</strong></p>
+            </div>
+            <div class="field">
+                <label>Tipo de Recurso</label>
+                <!-- <p><strong>{{ selectedBooking.resource.type.name }}</strong></p> -->
+            </div>
+            <div class="field">
+                <label>Reservado por</label>
+                <p><strong>{{ selectedBooking.user.name }}</strong></p>
+            </div>
+            <div class="formgrid grid">
+                <div class="field col">
+                    <label>Inicio</label>
+                    <p><strong>{{ selectedBooking.startTime | date:'medium' }}</strong></p>
+                </div>
+                <div class="field col">
+                    <label>Fin</label>
+                    <p><strong>{{ selectedBooking.endTime | date:'medium' }}</strong></p>
+                </div>
+            </div>
+            <div class="field" *ngIf="selectedBooking.notes">
+                <label>Notas</label>
+                <p>{{ selectedBooking.notes }}</p>
+            </div>
+            <div class="field">
+                <label>Estado</label>
+                <p><p-tag [value]="selectedBooking.status" [severity]="getColorForStatus(selectedBooking.status)"></p-tag></p>
+            </div>
+        </div>
+    </ng-template>
+
+    <ng-template pTemplate="footer">
+        <button pButton pRipple label="Cerrar" icon="pi pi-times" class="p-button-text" (click)="viewBookingDialog = false"></button>
+        <button pButton pRipple label="Cancelar Reserva" icon="pi pi-trash" class="p-button-danger" *ngIf="selectedBooking && currentUser?.id === selectedBooking.user._id && selectedBooking.status === 'confirmada'"
+                (click)="cancelBooking()"></button>
     </ng-template>
 </p-dialog>
